# NekoCAT-Converter

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt  screenshot.sh  test_import.sh
demo/: ESI.XML  SDO.XML
docs/: dev.md
docs/superpowers/plans/: 2026-06-17-v0.3-refactor-plan.md
docs/superpowers/specs/: 2026-06-17-v0.3-refactor-design.md
examples/D507/: ESI.XML  SDO.TXT
gui/: CMakeLists.txt  __init__.py  main_window.py  screenshot.py  worker.py
gui-cpp/: CMakeLists.txt
gui-cpp/src/: main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
gui-cpp/src/pages/: fileselectpage.h  generatepage.cpp  identitypage.cpp  objecttablepage.cpp  objecttablepage.h  rulepage.cpp  rulepage.h
gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp
gui/src/core/: theme.cpp  theme.h
gui/src/pages/: fileselectpage.cpp  generatepage.h  identitypage.h  pdopage.cpp  pdopage.h
gui/widgets/: __init__.py  file_select_page.py  generate_page.py  identity_page.py  object_table_page.py  pdo_page.py  rule_page.py
nekoecat/: __init__.py  config.py  constants.py  core.py  utils.py
nekoecat/engine/: __init__.py  classifier.py  fix_engine.py  merger.py  rule_engine.py  ssc_fix_engine.py  validator.py
nekoecat/generator/: __init__.py  code_generator.py  esi_generator.py  report_generator.py  ssc_xlsx_generator.py
nekoecat/log/: __init__.py  ssc_log_parser.py
nekoecat/model/: __init__.py  device.py  object_dict.py  pdo.py  rules.py
nekoecat/parser/: __init__.py  esi_parser.py  sdo_parser.py  template_parser.py
templates/: coe_callbacks.c.j2  pdo_structs.h.j2  report.md.j2
tests/: test_core.py  test_engine.py  test_parser.py
